[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/WorldShape.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]

radius = 400.0

[sub_resource type="OccluderPolygon2D" id=2]

polygon = PoolVector2Array( -50, -50, -50, 50, 50, 50, 50, -50 )

[node name="WorldShape" type="StaticBody2D"]
z_index = 1100
z_as_relative = false
script = ExtResource( 1 )

[node name="NicenessArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NicenessArea"]
shape = SubResource( 1 )

[node name="Collider" type="CollisionShape2D" parent="."]

[node name="Sprites" type="Node2D" parent="."]
scale = Vector2( 0.1, 0.1 )

[node name="NiceSprite" type="Sprite" parent="Sprites"]
z_index = 1100

[node name="WeirdSprite" type="Sprite" parent="Sprites"]
visible = false
z_index = 1100

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 2 )

